--- a/default/app.conf
+++ b/default/app.conf
@@ -7,8 +7,8 @@ build = 1
 
 [launcher]
 author = Nathan Worsham
-version = 1.0.0
-description = Using the time field generate whether a day is a holdiay, business day, and/or business holiday
+version = 1.1.0
+description = Using the time field generate whether a day is a holiday, business day, and/or business holiday
 
 [ui]
 is_visible = 0
